[gd_scene load_steps=36 format=3 uid="uid://b7nlta0pfn5pe"]

[ext_resource type="Script" uid="uid://dt6ljgjcnh0se" path="res://Scripts/boss_preguica.gd" id="1_bp8a1"]
[ext_resource type="Texture2D" uid="uid://c62pkpu7imtmq" path="res://Assets/Sprite Pack 2/8 - Comrade Cheese Puff/Tank_Movement (32 x 32) (1).png" id="2_g7smv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yycsf"]
size = Vector2(28, 19)

[sub_resource type="Animation" id="Animation_pwc6h"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion_tank:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sl17s"]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_lose_boss"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("explosion_tank:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_wsgah"]
resource_name = "enter_scene"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 9, 8, 9, 8, 9, 8, 9]
}

[sub_resource type="Animation" id="Animation_fk0gd"]
resource_name = "hide_bomb"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_2k5ns"]
resource_name = "missle_atack"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xgwof"]
resource_name = "mooving"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_emo6i"]
resource_name = "show_reveal"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 6, 5, 4, 3, 2]
}

[sub_resource type="Animation" id="Animation_d6nmg"]
resource_name = "vunerable"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vpwi"]
_data = {
&"RESET": SubResource("Animation_pwc6h"),
&"death": SubResource("Animation_sl17s"),
&"enter_scene": SubResource("Animation_wsgah"),
&"hide_bomb": SubResource("Animation_fk0gd"),
&"missle_atack": SubResource("Animation_2k5ns"),
&"mooving": SubResource("Animation_xgwof"),
&"show_reveal": SubResource("Animation_emo6i"),
&"vunerable": SubResource("Animation_d6nmg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_njy68"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fsuuh"]
animation = &"enter_scene"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rcnis"]
animation = &"hide_bomb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_huccg"]
animation = &"missle_atack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tkp3v"]
animation = &"mooving"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lbho6"]
animation = &"show_reveal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3jv6"]
animation = &"vunerable"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t535w"]
advance_mode = 2
advance_condition = &"can_move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qr872"]
advance_mode = 2
advance_condition = &"time_missle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_67ixx"]
advance_mode = 2
advance_condition = &"can_move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cecjl"]
advance_mode = 2
advance_condition = &"time_bomb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tu04c"]
advance_mode = 2
advance_condition = &"is_vunerable"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_443yr"]
advance_mode = 2
advance_condition = &"can_move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dcb1f"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_avurn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_le5dw"]
states/Start/position = Vector2(97.3333, 93.2985)
states/death/node = SubResource("AnimationNodeAnimation_njy68")
states/death/position = Vector2(837.333, 159.333)
states/enter_scene/node = SubResource("AnimationNodeAnimation_fsuuh")
states/enter_scene/position = Vector2(213.333, 90.4913)
states/hide_bomb/node = SubResource("AnimationNodeAnimation_rcnis")
states/hide_bomb/position = Vector2(624, 78)
states/missle_atack/node = SubResource("AnimationNodeAnimation_huccg")
states/missle_atack/position = Vector2(485.333, 186)
states/mooving/node = SubResource("AnimationNodeAnimation_tkp3v")
states/mooving/position = Vector2(490.667, 87.0699)
states/show_reveal/node = SubResource("AnimationNodeAnimation_lbho6")
states/show_reveal/position = Vector2(354.667, 85.8025)
states/vunerable/node = SubResource("AnimationNodeAnimation_i3jv6")
states/vunerable/position = Vector2(701.333, 186.444)
transitions = ["show_reveal", "mooving", SubResource("AnimationNodeStateMachineTransition_t535w"), "mooving", "missle_atack", SubResource("AnimationNodeStateMachineTransition_qr872"), "missle_atack", "mooving", SubResource("AnimationNodeStateMachineTransition_67ixx"), "missle_atack", "hide_bomb", SubResource("AnimationNodeStateMachineTransition_cecjl"), "hide_bomb", "vunerable", SubResource("AnimationNodeStateMachineTransition_tu04c"), "vunerable", "mooving", SubResource("AnimationNodeStateMachineTransition_443yr"), "Start", "enter_scene", SubResource("AnimationNodeStateMachineTransition_dcb1f"), "enter_scene", "show_reveal", SubResource("AnimationNodeStateMachineTransition_avurn")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aea53"]
size = Vector2(18, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvxqt"]
size = Vector2(154, 20)

[sub_resource type="Gradient" id="Gradient_h20g0"]
offsets = PackedFloat32Array(0, 0.711409, 1)
colors = PackedColorArray(0.92549, 0.92549, 0.2, 1, 0.815686, 0.294118, 0.243137, 1, 0.921569, 0.470588, 0.298039, 0.356863)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ojkxb"]
gradient = SubResource("Gradient_h20g0")

[sub_resource type="Curve" id="Curve_gabqn"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.502976, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jag7r"]
curve = SubResource("Curve_gabqn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ftprm"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 1.5
scale_max = 2.5
scale_curve = SubResource("CurveTexture_jag7r")
color_ramp = SubResource("GradientTexture1D_ojkxb")

[node name="boss_preguiça" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_layer = 128
collision_mask = 3
script = ExtResource("1_bp8a1")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, -9.5)
shape = SubResource("RectangleShape2D_yycsf")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_g7smv")
hframes = 12

[node name="missel_point" type="Marker2D" parent="sprite"]
unique_name_in_owner = true
position = Vector2(0, 6)

[node name="bomb_point" type="Marker2D" parent="sprite"]
unique_name_in_owner = true
position = Vector2(-2, -1)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8vpwi")
}

[node name="anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_le5dw")
anim_player = NodePath("../anim")
parameters/conditions/can_move = false
parameters/conditions/is_vunerable = false
parameters/conditions/time_bomb = false
parameters/conditions/time_missle = false

[node name="bomb_cooldown" type="Timer" parent="."]

[node name="missle_cooldown" type="Timer" parent="."]
wait_time = 2.5

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(-1, -9)
target_position = Vector2(-16, 0)
collision_mask = 3

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 4

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, -19)
shape = SubResource("RectangleShape2D_aea53")
disabled = true
debug_color = Color(0.879494, 0.239606, 0.607208, 0.42)

[node name="player_detector" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="player_detector"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_cvxqt")
debug_color = Color(0.623015, 0.528705, 0.192666, 0.42)

[node name="explosion_tank" type="GPUParticles2D" parent="."]
emitting = false
amount = 48
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_ftprm")

[connection signal="timeout" from="bomb_cooldown" to="." method="_on_bomb_cooldown_timeout"]
[connection signal="timeout" from="missle_cooldown" to="." method="_on_missle_cooldown_timeout"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="player_detector" to="." method="_on_player_detector_body_entered"]
